# AgentCI

./: .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  README.md  agentci-build-log.html  architecture.html  pyproject.toml
agentci/: cache.py  cli.py  config.py  experiments_registry.py  throttle.py  tracing.py
agentci/data/: dataset.py  generate.py  kb.json  tickets.json
agentci/engineer/: __init__.py  agent.py  battery.py  cluster.py  compare.py  diagnose.py  fix.py  fix_author.py  guard.py  independent_judge.py  investigate.py  lift.py  mint.py  report.py  review.py
agentci/evals/: experiment.py  (+1 more)
candidates/: benign_format.txt  benign_reword.txt  improve_cite.txt  improve_clarify.txt  labels.json  reg_concise.txt  reg_overrefusal.txt  reg_refund.txt  reg_routing.txt
docs/: system-diagram.md
scripts/: calibrate_gate.py  record_traces.py
tests/: test_approve.py  test_battery.py  test_cache.py  test_candidates.py  test_cli.py  test_cli_approve.py  test_cluster.py  test_config.py  test_dataset_upload.py  test_diagnose.py  test_engineer_agent.py  test_experiment.py  test_fetch_baseline.py  test_fix.py  test_flips.py  test_generate.py  test_guard.py  test_independent_judge.py  test_investigate.py  test_judge_parsing.py  test_judges.py  test_kb.py  test_lift.py  test_memory.py  test_mint.py  test_report.py  test_review.py  test_run_check.py  test_server.py  test_split.py  test_target_agent.py  test_target_run.py  test_tracing.py
video/: README.md  gen_narration.py  gen_narration_elevenlabs.py  narration.json  package-lock.json  package.json
(+22 files in other folders)
